# rsty-stack-example

todo_api/: .gitignore  Cargo.toml
todo_api/src/: db.rs  error.rs  main.rs
todo_web/: Cargo.toml  Trunk.toml
todo_web/src/: controllers.rs  main.rs  todo_api.rs
